--- a/index.html
+++ b/index.html
@@ -374,16 +374,16 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="images/world1.jpg" alt=""><div class="card-body">نيويورك</div></div>
-    <div class="destination-card"><img src="images/world2.jpg" alt=""><div class="card-body">ريو دي جانيرو</div></div>
-    <div class="destination-card"><img src="images/world3.jpg" alt=""><div class="card-body">تورنتو</div></div>
-    <div class="destination-card"><img src="images/world4.jpg" alt=""><div class="card-body">بوينس آيرس</div></div>
-    <div class="destination-card"><img src="images/world5.jpg" alt=""><div class="card-body">لوس أنجلوس</div></div>
-    <div class="destination-card"><img src="images/world6.jpg" alt=""><div class="card-body">سيدني</div></div>
-    <div class="destination-card"><img src="images/world7.jpg" alt=""><div class="card-body">ملبورن</div></div>
-    <div class="destination-card"><img src="images/world8.jpg" alt=""><div class="card-body">شيكاغو</div></div>
-    <div class="destination-card"><img src="images/world9.jpg" alt=""><div class="card-body">سان فرانسيسكو</div></div>
-    <div class="destination-card"><img src="images/world10.jpg" alt=""><div class="card-body">ميامي</div></div>
+    <div class="destination-card"><img src="newiork.jpg" alt="نيويورك"><div class="card-body">نيويورك</div></div>
+    <div class="destination-card"><img src="riode.jpg" alt="ريو دي جانيرو"><div class="card-body">ريو دي جانيرو</div></div>
+    <div class="destination-card"><img src="sedni.jpg" alt="سيدني"><div class="card-body">سيدني</div></div>
+    <div class="destination-card"><img src="otaoa.jpg" alt="أوتاوا"><div class="card-body">أوتاوا</div></div>
+    <div class="destination-card"><img src="losangles.jpg" alt="لوس أنجلوس"><div class="card-body">لوس أنجلوس</div></div>
+    <div class="destination-card"><img src="mosco.jpg" alt="موسكو"><div class="card-body">موسكو</div></div>
+    <div class="destination-card"><img src="saobaolo.jpg" alt="ساو باولو"><div class="card-body">ساو باولو</div></div>
+    <div class="destination-card"><img src="lema.jpg" alt="ليما"><div class="card-body">ليما</div></div>
+    <div class="destination-card"><img src="mxeco.jpg" alt="ميكسيكو"><div class="card-body">ميكسيكو</div></div>
+    <div class="destination-card"><img src="boins.jpg" alt="بوينس آيرس"><div class="card-body">بوينس آيرس</div></div>
   </div>
 </div>
 
