--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 
     .marketing-feature .icon {
       flex-shrink: 0;
-      margin-left: 20px; /* إبعاد الأيقونة عن الحافة اليمنى قليلاً نحو اليمين */
+      margin-right: 20px; /* إبعاد الأيقونة عن الحافة اليمنى قليلاً نحو اليمين */
       width: 36px;
       height: 36px;
-      order: 2; /* إبقاء الأيقونة في اليمين */
+      order: 2; /* إبقاء الأيقونة في اليمين كما كانت */
     }
 
     .marketing-feature .text {
       flex: 1;
       text-align: right;
-      margin-right: 20px; /* إبعاد النص عن الحافة اليمنى */
+      margin-right: 60px; /* إبعاد النص عن الحافة اليمنى للسماح للأيقونة بالظهور قليلاً نحو اليمين */
       text-align: justify; /* جعل النصوص متوازية الاسطر */
     }
 
