--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <div class="see-more"><a href="#">المزيد</a></div>
           </div>
           <div class="destination-slider">
-            <div class="card-body cairo-bold"><img src="baris.jpg" alt="باريس"><div class="card-body cairo-bold">باريس</div></div>
+            <div class="destination-card"><img src="baris.jpg" alt="باريس"><div class="card-body cairo-bold">باريس</div></div>
             <div class="destination-card"><img src="london.jpg" alt="لندن"><div class="card-body cairo-bold">لندن</div></div>
             <div class="destination-card"><img src="roma.jpg" alt="روما"><div class="card-body cairo-bold">روما</div></div>
             <div class="destination-card"><img src="viena.jpg" alt="فيينا"><div class="card-body cairo-bold">فيينا</div></div>
