--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
       border: none;
       background: none;
       padding: 0;
-      font-size: 1.5rem;
+      font-size: 1rem; /* تقليل الحجم */
       color: #fff;
       cursor: pointer;
       order: 2;
     }
 
     .navbar-toggler-icon {
-      width: 1.5em;
-      height: 1.5em;
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      width: 1em; /* تقليل الحجم */
+      height: 1em;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' d='M2 5h16M2 10h16M2 15h16'/%3e%3c/svg%3e");
     }
 
     .nav-link {
       color: #fff !important;
       margin-left: 0;
-      padding: 8px 10px;
+      padding: 10px 15px;
       display: block;
       position: relative;
     }
@@ -86,21 +86,35 @@
 
     .navbar-collapse {
       flex-direction: column;
-      min-height: 300px;
-      padding: 10px;
+      min-height: 400px; /* زيادة الطول ليكون مشابهًا للصورة الثانية */
+      padding: 15px;
       position: relative;
+      transition: opacity 0.3s ease; /* تأثير التلاشي */
+      opacity: 1;
     }
 
-    /* تعديل القوائم المنسدلة */
+    .navbar-collapse.collapsing {
+      opacity: 0;
+      height: 0;
+      overflow: hidden;
+    }
+
     .nav-item .sub-menu {
       display: none;
       list-style: none;
-      padding: 0;
-      margin: 0 0 8px 20px; /* زحزحة قليلة لليمين */
+      padding: 0 0 0 20px;
+      margin: 0;
+      transition: opacity 0.3s ease; /* تأثير التلاشي */
+      opacity: 0;
+    }
+
+    .nav-item .sub-menu.active {
+      display: block;
+      opacity: 1;
     }
 
     .nav-item .sub-menu li {
-      padding: 5px 0;
+      padding: 8px 0;
     }
 
     .nav-item .sub-menu a {
@@ -114,302 +128,68 @@
     }
 
     .nav-link.toggle::after {
-      content: " ▾"; /* سهم للأسفل */
+      content: " ▾";
       margin-right: 5px;
     }
 
     .nav-link.toggle.active::after {
-      content: " ▴"; /* سهم للأعلى عند النشط */
+      content: " ▴";
     }
 
-    .destinations {
-      padding: 20px;
-    }
-
-    .destination-card {
-      background: #2a2a2a;
-      color: #fff;
-      border-radius: 12px;
-      padding: 10px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      height: 100%;
-    }
-
-    .destination-card img {
-      width: 100%;
-      border-radius: 8px;
-      height: 120px;
-      object-fit: cover;
-    }
-
-    .destination-card h5 {
-      margin-top: 10px;
-    }
-
-    .footer {
-      background-color: #222;
-      color: #fff;
-      text-align: center;
-      padding: 12px;
-    }
-
-    #ad-slider {
-      position: relative;
-      height: 150px;
-      border-radius: 12px;
-      overflow: hidden;
-      margin: 20px auto;
-      z-index: 1;
-    }
-
-    .ad-slide {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      opacity: 0;
-      transition: opacity 2s ease-in-out;
-    }
-
-    .ad-slide.active {
-      opacity: 1;
-      z-index: 1;
-    }
-
-    .fade img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    .clock-circle {
-      position: relative;
-      width: 100px;
-      height: 100px;
-      margin: 0 auto;
-      border: 4px solid #aaa;
-      border-radius: 50%;
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
-    }
-
-    .hand {
-      position: absolute;
-      bottom: 50%;
-      left: 50%;
-      transform-origin: bottom center;
-      background: #333;
-      border-radius: 2px;
-    }
-
+    .destinations { padding: 20px; }
+    .destination-card { background: #2a2a2a; color: #fff; border-radius: 12px; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.3); height: 100%; }
+    .destination-card img { width: 100%; border-radius: 8px; height: 120px; object-fit: cover; }
+    .destination-card h5 { margin-top: 10px; }
+    .footer { background-color: #222; color: #fff; text-align: center; padding: 12px; }
+    #ad-slider { position: relative; height: 150px; border-radius: 12px; overflow: hidden; margin: 20px auto; z-index: 1; }
+    .ad-slide { position: absolute; top: 0; left: 0; width: 100%; opacity: 0; transition: opacity 2s ease-in-out; }
+    .ad-slide.active { opacity: 1; z-index: 1; }
+    .fade img { width: 100%; height: 150px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+    .clock-circle { position: relative; width: 100px; height: 100px; margin: 0 auto; border: 4px solid #aaa; border-radius: 50%; background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.4); }
+    .hand { position: absolute; bottom: 50%; left: 50%; transform-origin: bottom center; background: #333; border-radius: 2px; }
     .hour { width: 4px; height: 25px; }
     .minute { width: 3px; height: 35px; }
     .second { width: 2px; height: 40px; }
-
-    .clock-circle .number {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      font-size: 10px;
-      color: #333;
-    }
-
-    .clock-circle .number span {
-      position: absolute;
-      transform: translate(-50%, -50%);
-    }
-
-    /* الجمل التسويقية */
-    .marketing-box {
-      background-color: #f9f4ea;
-      border-radius: 20px;
-      padding: 20px;
-      margin: 30px auto 10px auto;
-      max-width: 900px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      display: flex;
-      flex-direction: column;
-      gap: 0px;
-    }
-
-    .marketing-feature {
-      display: flex;
-      align-items: flex-start;
-      padding: 0 24px;
-      padding-left: 32px;
-      line-height: 1.7;
-      word-break: break-word;
-      margin-bottom: 0;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-
-    .marketing-feature:not(:last-child) {
-      margin-bottom: 0;
-    }
-
-    .marketing-feature .icon {
-      flex-shrink: 0;
-      margin-left: 15px;
-      margin-right: 10px;
-      width: 36px;
-      height: 36px;
-    }
-
-    .marketing-feature .text {
-      flex: 1;
-      text-align: right;
-      text-align: justify;
-    }
-
-    .marketing-feature .text h5 {
-      font-size: 1.1rem;
-      font-weight: bold;
-      color: #222;
-    }
-
-    .marketing-feature .text p {
-      font-size: 0.95rem;
-      line-height: 1.5;
-      color: #444;
-      margin-top: 0;
-    }
-
-    /* كلاسات مخصصة لخط Cairo */
-    .cairo-regular {
-      font-family: "Cairo", sans-serif;
-      font-optical-sizing: auto;
-      font-weight: 400;
-      font-style: normal;
-      font-variation-settings: "slnt" 0;
-    }
-
-    .cairo-bold {
-      font-family: "Cairo", sans-serif;
-      font-optical-sizing: auto;
-      font-weight: 700;
-      font-style: normal;
-      font-variation-settings: "slnt" 0;
-    }
-
-    /* سلايدر وجهات */
-    .slider-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px 5px;
-    }
-
-    .slider-title {
-      font-weight: bold;
-      font-size: 16px;
-      color: #333;
-    }
-
-    .see-more a {
-      color: #007bff;
-      font-weight: bold;
-      font-size: 14px;
-      text-decoration: none;
-    }
-
-    .see-more a:hover {
-      text-decoration: underline;
-    }
-
-    .destination-slider {
-      overflow-x: auto;
-      white-space: nowrap;
-      scroll-behavior: smooth;
-      padding: 5px 10px;
-      animation: slide 60s linear infinite;
-    }
-
-    .destination-card {
-      display: inline-block;
-      width: 250px;
-      height: 200px;
-      margin: 0 5px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s;
-    }
-
-    .destination-card:hover {
-      transform: scale(1.05);
-    }
-
-    .destination-card img {
-      width: 100%;
-      height: 150px;
-      border-radius: 10px 10px 0 0;
-      object-fit: cover;
-    }
-
-    .card-body {
-      padding: 8px;
-      text-align: center;
-      font-size: 14px;
-      font-weight: bold;
-      color: #333;
-      background: #fff;
-      border-radius: 0 0 10px 10px;
-      line-height: 1.5;
-    }
-
-    /* تعديل ألوان الوضع المسائي */
-    body.dark-mode .marketing-box {
-      background-color: #333;
-    }
-
-    body.dark-mode .marketing-feature .text h5 {
-      color: #ddd;
-    }
-
-    body.dark-mode .marketing-feature .text p {
-      color: #bbb;
-    }
-
-    body.dark-mode .destination-card {
-      background: #444;
-    }
-
-    body.dark-mode .card-body {
-      background: #444;
-      color: #ddd;
-    }
-
-    body.dark-mode .slider-title {
-      color: #ddd;
-    }
-
-    body.dark-mode .see-more a {
-      color: #007bff;
-    }
-
-    body.dark-mode #ad-slider {
-      box-shadow: 0 4px 10px rgba(255,255,255,0.2);
-    }
-
-    /* تصميم متجاوب للقائمة */
+    .clock-circle .number { position: absolute; width: 100%; height: 100%; font-size: 10px; color: #333; }
+    .clock-circle .number span { position: absolute; transform: translate(-50%, -50%); }
+    .marketing-box { background-color: #f9f4ea; border-radius: 20px; padding: 20px; margin: 30px auto 10px auto; max-width: 900px; box-shadow: 0 0 10px rgba(0,0,0,0.05); display: flex; flex-direction: column; gap: 0px; }
+    .marketing-feature { display: flex; align-items: flex-start; padding: 0 24px; padding-left: 32px; line-height: 1.7; word-break: break-word; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
+    .marketing-feature:not(:last-child) { margin-bottom: 0; }
+    .marketing-feature .icon { flex-shrink: 0; margin-left: 15px; margin-right: 10px; width: 36px; height: 36px; }
+    .marketing-feature .text { flex: 1; text-align: right; text-align: justify; }
+    .marketing-feature .text h5 { font-size: 1.1rem; font-weight: bold; color: #222; }
+    .marketing-feature .text p { font-size: 0.95rem; line-height: 1.5; color: #444; margin-top: 0; }
+    .cairo-regular { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 400; font-style: normal; font-variation-settings: "slnt" 0; }
+    .cairo-bold { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 700; font-style: normal; font-variation-settings: "slnt" 0; }
+    .slider-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px 5px; }
+    .slider-title { font-weight: bold; font-size: 16px; color: #333; }
+    .see-more a { color: #007bff; font-weight: bold; font-size: 14px; text-decoration: none; }
+    .see-more a:hover { text-decoration: underline; }
+    .destination-slider { overflow-x: auto; white-space: nowrap; scroll-behavior: smooth; padding: 5px 10px; animation: slide 60s linear infinite; }
+    .destination-card { display: inline-block; width: 250px; height: 200px; margin: 0 5px; background: #fff; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); transition: transform 0.3s; }
+    .destination-card:hover { transform: scale(1.05); }
+    .destination-card img { width: 100%; height: 150px; border-radius: 10px 10px 0 0; object-fit: cover; }
+    .card-body { padding: 8px; text-align: center; font-size: 14px; font-weight: bold; color: #333; background: #fff; border-radius: 0 0 10px 10px; line-height: 1.5; }
+    body.dark-mode .marketing-box { background-color: #333; }
+    body.dark-mode .marketing-feature .text h5 { color: #ddd; }
+    body.dark-mode .marketing-feature .text p { color: #bbb; }
+    body.dark-mode .destination-card { background: #444; }
+    body.dark-mode .card-body { background: #444; color: #ddd; }
+    body.dark-mode .slider-title { color: #ddd; }
+    body.dark-mode .see-more a { color: #007bff; }
+    body.dark-mode #ad-slider { box-shadow: 0 4px 10px rgba(255,255,255,0.2); }
     @media (max-width: 992px) {
       .navbar-collapse {
         background-color: #222;
         position: absolute;
         top: 60px;
         left: 0;
-        width: 200px;
-        padding: 10px;
+        width: 250px; /* زيادة العرض لتتناسب مع الطول */
+        padding: 15px;
         border-radius: 5px 0 5px 5px;
         z-index: 1001;
       }
     }
-
-    /* زر تبديل الوضع */
     #theme-toggle {
       position: absolute;
       bottom: 10px;
@@ -443,10 +223,11 @@
         <li class="nav-item">
           <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'destinations')">وجهات سياحية</a>
           <ul class="sub-menu" id="destinations">
-            <li><a href="#asia">وجهات آسيا</a></li>
-            <li><a href="#europe">وجهات أوروبا</a></li>
-            <li><a href="#africa">وجهات أفريقيا</a></li>
-            <li><a href="#world">بقية العالم</a></li>
+            <li><a href="#">وجهة 1</a></li>
+            <li><a href="#">وجهة 2</a></li>
+            <li><a href="#">وجهة 3</a></li>
+            <li><a href="#">وجهة 4</a></li>
+            <li><a href="#">وجهة 5</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -462,7 +243,8 @@
           <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'languages')">اللغة</a>
           <ul class="sub-menu" id="languages">
             <li><a href="#" onclick="changeLanguage('ar')">العربية</a></li>
-            <li><a href="#" onclick="changeLanguage('en')">English</a></li>
+            <li><a href="#" onclick="changeLanguage('en')">الإنجليزية</a></li>
+            <li><a href="#" onclick="changeLanguage('fr')">الفرنسية</a></li>
           </ul>
         </li>
       </ul>
@@ -611,7 +393,7 @@
       }
     }
 
-    // وظيفة لتبديل القوائم المنسدلة
+    // وظيفة لتبديل القوائم المنسدلة مع تأثير التلاشي
     function toggleSubMenu(event, menuId) {
       event.preventDefault();
       const menu = document.getElementById(menuId);
@@ -620,7 +402,11 @@
 
       // إخفاء جميع القوائم المنسدلة
       document.querySelectorAll('.sub-menu').forEach(subMenu => {
-        subMenu.style.display = 'none';
+        subMenu.classList.remove('active');
+        subMenu.style.opacity = '0';
+        setTimeout(() => {
+          if (!subMenu.classList.contains('active')) subMenu.style.display = 'none';
+        }, 300); // يتطابق مع زمن التلاشي
       });
       document.querySelectorAll('.nav-link.toggle').forEach(link => {
         link.classList.remove('active');
@@ -629,6 +415,10 @@
       // إظهار/إخفاء القائمة المحددة
       if (!isActive) {
         menu.style.display = 'block';
+        setTimeout(() => {
+          menu.classList.add('active');
+          menu.style.opacity = '1';
+        }, 10); // تأخير صغير للسماح بتطبيق التلاشي
         toggle.classList.add('active');
       }
     }
