--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
 
     .navbar-collapse {
       flex-direction: column;
-      min-height: 400px; /* زيادة الطول ليكون مشابهًا للصورة الثانية */
+      min-height: 400px; /* زيادة الطول */
       padding: 15px;
-      position: relative;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%; /* تمتد عبر الصفحة */
+      background-color: #222;
       transition: opacity 0.3s ease; /* تأثير التلاشي */
       opacity: 1;
+      z-index: 1001;
     }
 
     .navbar-collapse.collapsing {
@@ -180,14 +185,10 @@
     body.dark-mode #ad-slider { box-shadow: 0 4px 10px rgba(255,255,255,0.2); }
     @media (max-width: 992px) {
       .navbar-collapse {
-        background-color: #222;
-        position: absolute;
-        top: 60px;
+        width: 100%; /* تمتد عبر الصفحة في الوضع المتجاوب */
         left: 0;
-        width: 250px; /* زيادة العرض لتتناسب مع الطول */
         padding: 15px;
-        border-radius: 5px 0 5px 5px;
-        z-index: 1001;
+        border-radius: 0;
       }
     }
     #theme-toggle {
@@ -223,11 +224,10 @@
         <li class="nav-item">
           <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'destinations')">وجهات سياحية</a>
           <ul class="sub-menu" id="destinations">
-            <li><a href="#">وجهة 1</a></li>
-            <li><a href="#">وجهة 2</a></li>
-            <li><a href="#">وجهة 3</a></li>
-            <li><a href="#">وجهة 4</a></li>
-            <li><a href="#">وجهة 5</a></li>
+            <li><a href="#asia">وجهات آسيا</a></li>
+            <li><a href="#europe">وجهات أوروبا</a></li>
+            <li><a href="#africa">وجهات أفريقيا</a></li>
+            <li><a href="#world">بقية العالم</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -243,8 +243,7 @@
           <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'languages')">اللغة</a>
           <ul class="sub-menu" id="languages">
             <li><a href="#" onclick="changeLanguage('ar')">العربية</a></li>
-            <li><a href="#" onclick="changeLanguage('en')">الإنجليزية</a></li>
-            <li><a href="#" onclick="changeLanguage('fr')">الفرنسية</a></li>
+            <li><a href="#" onclick="changeLanguage('en')">English</a></li>
           </ul>
         </li>
       </ul>
