--- a/asia.html
+++ b/asia.html
@@ -10,31 +10,215 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
 
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+
   <style>
-    body {
-      font-family: 'Cairo', sans-serif;
+    html, body {
+      min-height: 100vh;
       margin: 0;
-      padding: 20px;
-      background-color: #f5f5f5;
-      color: #333;
+      padding: 0;
+      font-family: 'Cairo', sans-serif;
+      color: #000;
+      transition: all 0.3s ease;
     }
 
-    h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      text-align: center;
-      margin-bottom: 30px;
+    body.light-mode {
+      background-color: #f5f5f5;
+      color: #000;
+    }
+
+    body.dark-mode {
+      background-color: #222;
+      color: #fff;
+    }
+
+    .main-content {
+      flex: 1;
+    }
+
+    .navbar {
+      background-color: #222;
+      height: 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      position: relative;
+      z-index: 1000;
+    }
+
+    .navbar img {
+      height: 54px;
+      width: auto;
+      object-fit: contain;
+    }
+
+    .navbar-toggler {
+      border: none;
+      background: none;
+      padding: 0;
+      font-size: 1rem;
+      color: #fff;
+      cursor: pointer;
+      order: 2;
+    }
+
+    .navbar-toggler-icon {
+      width: 1em;
+      height: 1em;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' d='M2 5h16M2 10h16M2 15h16'/%3e%3c/svg%3e");
+    }
+
+    .nav-link {
+      color: #fff !important;
+      margin-left: 0;
+      padding: 10px 15px;
+      display: block;
+      position: relative;
+    }
+
+    .nav-link:hover {
+      color: #007bff !important;
+    }
+
+    .navbar-collapse {
+      flex-direction: column;
+      min-height: 400px;
+      padding: 15px;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      width: 100%;
+      background-color: #222;
+      transition: opacity 0.3s ease;
+      opacity: 1;
+      z-index: 1001;
+    }
+
+    .navbar-collapse.collapsing {
+      opacity: 0;
+      height: 0;
+      overflow: hidden;
+    }
+
+    .nav-item .sub-menu {
+      display: none;
+      list-style: none;
+      padding: 0 0 0 20px;
+      margin: 0;
+      transition: opacity 0.3s ease;
+      opacity: 0;
+    }
+
+    .nav-item .sub-menu.active {
+      display: block;
+      opacity: 1;
+    }
+
+    .nav-item .sub-menu li {
+      padding: 8px 0;
+    }
+
+    .nav-item .sub-menu a {
+      color: #fff;
+      text-decoration: none;
+      display: block;
+    }
+
+    .nav-item .sub-menu a:hover {
+      color: #007bff;
+    }
+
+    .nav-link.toggle::after {
+      content: " ▾";
+      margin-right: 5px;
+    }
+
+    .nav-link.toggle.active::after {
+      content: " ▴";
+    }
+
+    .destinations { padding: 20px; }
+    .destination-card { background: #2a2a2a; color: #fff; border-radius: 12px; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.3); height: 100%; }
+    .destination-card img { width: 100%; border-radius: 8px; height: 120px; object-fit: cover; }
+    .destination-card h5 { margin-top: 10px; }
+    .footer { background-color: #222; color: #fff; text-align: center; padding: 12px; }
+    #ad-slider { position: relative; height: 150px; border-radius: 12px; overflow: hidden; margin: 20px auto; z-index: 1; }
+    .ad-slide { position: absolute; top: 0; left: 0; width: 100%; opacity: 0; transition: opacity 2s ease-in-out; }
+    .ad-slide.active { opacity: 1; z-index: 1; }
+    .fade img { width: 100%; height: 150px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
+    .clock-circle { position: relative; width: 100px; height: 100px; margin: 0 auto; border: 4px solid #aaa; border-radius: 50%; background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.4); }
+    .hand { position: absolute; bottom: 50%; left: 50%; transform-origin: bottom center; background: #333; border-radius: 2px; }
+    .hour { width: 4px; height: 25px; }
+    .minute { width: 3px; height: 35px; }
+    .second { width: 2px; height: 40px; }
+    .clock-circle .number { position: absolute; width: 100%; height: 100%; font-size: 10px; color: #333; }
+    .clock-circle .number span { position: absolute; transform: translate(-50%, -50%); }
+    .marketing-box { background-color: #f9f4ea; border-radius: 20px; padding: 20px; margin: 30px auto 10px auto; max-width: 900px; box-shadow: 0 0 10px rgba(0,0,0,0.05); display: flex; flex-direction: column; gap: 0px; }
+    .marketing-feature { display: flex; align-items: flex-start; padding: 0 24px; padding-left: 32px; line-height: 1.7; word-break: break-word; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
+    .marketing-feature:not(:last-child) { margin-bottom: 0; }
+    .marketing-feature .icon { flex-shrink: 0; margin-left: 15px; margin-right: 10px; width: 36px; height: 36px; }
+    .marketing-feature .text { flex: 1; text-align: right; text-align: justify; }
+    .marketing-feature .text h5 { font-size: 1.1rem; font-weight: bold; color: #222; }
+    .marketing-feature .text p { font-size: 0.95rem; line-height: 1.5; color: #444; margin-top: 0; }
+    .cairo-regular { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 400; font-style: normal; font-variation-settings: "slnt" 0; }
+    .cairo-bold { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 700; font-style: normal; font-variation-settings: "slnt" 0; }
+    .slider-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px 5px; }
+    .slider-title { font-weight: bold; font-size: 16px; color: #333; }
+    .see-more a { color: #007bff; font-weight: bold; font-size: 14px; text-decoration: none; }
+    .see-more a:hover { text-decoration: underline; }
+    .destination-slider { overflow-x: auto; white-space: nowrap; scroll-behavior: smooth; padding: 5px 10px; animation: slide 60s linear infinite; }
+    .destination-card { display: inline-block; width: 250px; height: 200px; margin: 0 5px; background: #fff; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); transition: transform 0.3s; }
+    .destination-card:hover { transform: scale(1.05); }
+    .destination-card img { width: 100%; height: 150px; border-radius: 10px 10px 0 0; object-fit: cover; }
+    .card-body { padding: 8px; text-align: center; font-size: 14px; font-weight: bold; color: #333; background: #fff; border-radius: 0 0 10px 10px; line-height: 1.5; }
+    body.dark-mode .marketing-box { background-color: #333; }
+    body.dark-mode .marketing-feature .text h5 { color: #ddd; }
+    body.dark-mode .marketing-feature .text p { color: #bbb; }
+    body.dark-mode .destination-card { background: #444; }
+    body.dark-mode .card-body { background: #444; color: #ddd; }
+    body.dark-mode .slider-title { color: #ddd; }
+    body.dark-mode .see-more a { color: #007bff; }
+    body.dark-mode #ad-slider { box-shadow: 0 4px 10px rgba(255,255,255,0.2); }
+    @media (max-width: 992px) {
+      .navbar-collapse {
+        width: 100%;
+        left: 0;
+        padding: 15px;
+        border-radius: 0;
+      }
+    }
+    #theme-toggle {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 40px;
+      height: 40px;
+      font-size: 1.2rem;
+      border: none;
+      background-color: #222;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1002;
+      color: white;
     }
 
     .destinations-grid {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr); /* صفين في كل صف */
       gap: 20px;
       max-width: 1000px;
       margin: 0 auto;
+      padding: 20px;
     }
 
-    .destination-card {
+    .destinations-grid .destination-card {
       background-color: #fff;
       border-radius: 10px;
       overflow: hidden;
@@ -43,74 +227,199 @@
       transition: transform 0.3s;
     }
 
-    .destination-card:hover {
+    .destinations-grid .destination-card:hover {
       transform: scale(1.05);
     }
 
-    .destination-card img {
+    .destinations-grid .destination-card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
     }
 
-    .destination-card p {
+    .destinations-grid .destination-card p {
       font-size: 1.2rem;
       font-weight: 600;
       margin: 10px 0;
       color: #222;
     }
-
-    @media (max-width: 768px) {
-      .destinations-grid {
-        grid-template-columns: 1fr;
-      }
-    }
   </style>
 </head>
-<body>
-  <h1>أفضل الوجهات في آسيا</h1>
-
-  <div class="destinations-grid">
-    <div class="destination-card">
-      <img src="bangkok.jpg" alt="بانكوك">
-      <p>بانكوك</p>
-    </div>
-    <div class="destination-card">
-      <img src="riyadh.jpg" alt="الرياض">
-      <p>الرياض</p>
-    </div>
-    <div class="destination-card">
-      <img src="maldiv.jpg" alt="مالديف">
-      <p>مالديف</p>
-    </div>
-    <div class="destination-card">
-      <img src="dubai.jpg" alt="دبي">
-      <p>دبي</p>
-    </div>
-    <div class="destination-card">
-      <img src="kuala.jpg" alt="كوالالمبور">
-      <p>كوالالمبور</p>
-    </div>
-    <div class="destination-card">
-      <img src="singa.jpg" alt="سنغافورة">
-      <p>سنغافورة</p>
-    </div>
-    <div class="destination-card">
-      <img src="manila.jpg" alt="مانيلا">
-      <p>مانيلا</p>
-    </div>
-    <div class="destination-card">
-      <img src="tokio.jpg" alt="طوكيو">
-      <p>طوكيو</p>
-    </div>
-    <div class="destination-card">
-      <img src="bali.jpg" alt="بالي">
-      <p>بالي</p>
-    </div>
-    <div class="destination-card">
-      <img src="hanoi.jpg" alt="هانوي">
-      <p>هانوي</p>
+<body class="light-mode">
+  <div class="navbar">
+    <img src="paygs.gif" alt="Paygo Logo" style="order: 1;">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="order: 2;">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav" style="order: 3;">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">الرئيسية</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'destinations')">وجهات سياحية</a>
+          <ul class="sub-menu" id="destinations">
+            <li><a href="asia.html">وجهات آسيا</a></li>
+            <li><a href="#">وجهات أوروبا</a></li>
+            <li><a href="#">وجهات أفريقيا</a></li>
+            <li><a href="#">بقية العالم</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">المدونة</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">حولنا</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">اتصل بنا</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'languages')">اللغة</a>
+          <ul class="sub-menu" id="languages">
+            <li><a href="#" onclick="changeLanguage('ar')">العربية</a></li>
+            <li><a href="#" onclick="changeLanguage('en')">English</a></li>
+          </ul>
+        </li>
+      </ul>
+      <button id="theme-toggle" class="btn">🌞</button>
     </div>
   </div>
+
+  <div class="main-content">
+    <div class="container">
+      <div id="ad-slider">
+        <div class="ad-slide fade active"><img src="ad1.png" alt="إعلان 1"></div>
+        <div class="ad-slide fade"><img src="ad2.png" alt="إعلان 2"></div>
+        <div class="ad-slide fade"><img src="ad3.png" alt="إعلان 3"></div>
+      </div>
+    </div>
+
+    <div class="container my-5">
+      <div class="destinations-grid">
+        <div class="destination-card">
+          <img src="bangkok.jpg" alt="بانكوك">
+          <p>بانكوك</p>
+        </div>
+        <div class="destination-card">
+          <img src="riyadh.jpg" alt="الرياض">
+          <p>الرياض</p>
+        </div>
+        <div class="destination-card">
+          <img src="maldiv.jpg" alt="مالديف">
+          <p>مالديف</p>
+        </div>
+        <div class="destination-card">
+          <img src="dubai.jpg" alt="دبي">
+          <p>دبي</p>
+        </div>
+        <div class="destination-card">
+          <img src="kuala.jpg" alt="كوالالمبور">
+          <p>كوالالمبور</p>
+        </div>
+        <div class="destination-card">
+          <img src="singa.jpg" alt="سنغافورة">
+          <p>سنغافورة</p>
+        </div>
+        <div class="destination-card">
+          <img src="manila.jpg" alt="مانيلا">
+          <p>مانيلا</p>
+        </div>
+        <div class="destination-card">
+          <img src="tokio.jpg" alt="طوكيو">
+          <p>طوكيو</p>
+        </div>
+        <div class="destination-card">
+          <img src="bali.jpg" alt="بالي">
+          <p>بالي</p>
+        </div>
+        <div class="destination-card">
+          <img src="hanoi.jpg" alt="هانوي">
+          <p>هانوي</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <p class="cairo-regular">جميع الحقوق محفوظة © Paygo 2025</p>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // تبديل الوضع النهاري/المسائي
+    const themeToggle = document.getElementById('theme-toggle');
+    themeToggle.addEventListener('click', () => {
+      document.body.classList.toggle('light-mode');
+      document.body.classList.toggle('dark-mode');
+      themeToggle.textContent = document.body.classList.contains('dark-mode') ? '🌙' : '🌞';
+    });
+
+    // تغيير اللغة
+    function changeLanguage(lang) {
+      if (lang === 'en') {
+        alert('Switching to English (Feature to be implemented)');
+      } else {
+        alert('اللغة العربية مفعلة بالفعل');
+      }
+    }
+
+    // وظيفة لتبديل القوائم المنسدلة مع تأثير التلاشي
+    function toggleSubMenu(event, menuId) {
+      event.preventDefault();
+      const menu = document.getElementById(menuId);
+      const toggle = event.target;
+      const isActive = toggle.classList.contains('active');
+
+      document.querySelectorAll('.sub-menu').forEach(subMenu => {
+        subMenu.classList.remove('active');
+        subMenu.style.opacity = '0';
+        setTimeout(() => {
+          if (!subMenu.classList.contains('active')) subMenu.style.display = 'none';
+        }, 300);
+      });
+      document.querySelectorAll('.nav-link.toggle').forEach(link => {
+        link.classList.remove('active');
+      });
+
+      if (!isActive) {
+        menu.style.display = 'block';
+        setTimeout(() => {
+          menu.classList.add('active');
+          menu.style.opacity = '1';
+        }, 10);
+        toggle.classList.add('active');
+      }
+    }
+
+    // إخفاء القائمة المنسدلة عند الضغط في أي مكان
+    document.addEventListener('click', (event) => {
+      const navbarCollapse = document.getElementById('navbarNav');
+      const toggler = document.querySelector('.navbar-toggler');
+      if (!navbarCollapse.contains(event.target) && !toggler.contains(event.target)) {
+        const collapse = new bootstrap.Collapse(navbarCollapse, { toggle: false });
+        collapse.hide();
+        document.querySelectorAll('.sub-menu').forEach(subMenu => {
+          subMenu.classList.remove('active');
+          subMenu.style.opacity = '0';
+          setTimeout(() => {
+            if (!subMenu.classList.contains('active')) subMenu.style.display = 'none';
+          }, 300);
+        });
+        document.querySelectorAll('.nav-link.toggle').forEach(link => {
+          link.classList.remove('active');
+        });
+      }
+    });
+
+    let adIndex = 0;
+    const ads = document.querySelectorAll('.ad-slide');
+    function showNextAd() {
+      ads[adIndex].classList.remove('active');
+      adIndex = (adIndex + 1) % ads.length;
+      ads[adIndex].classList.add('active');
+    }
+    setInterval(showNextAd, 10000);
+  </script>
 </body>
 </html>
